force-app/main/default/objects/AmReg_Opportunity_Target__c/AmReg_Opportunity_Target__c.object-meta.xml
<CustomObject>
    <label>AmReg Opportunity Target</label>
    <nameField>
        <label>AmReg Opportunity Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AmReg Opportunity Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>