force-app/main/default/objects/AmReg_Opportunity_Target__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AmReg Opportunity Targets</relationshipLabel>
    <relationshipName>AmReg_Opportunity_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>