force-app/main/default/objects/AmReg_Opportunity_Target__c/fields/AmReg_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>AmReg_Contact_ID__c</fullName>
    <label>AmReg Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>