force-app/main/default/objects/AmReg_Opportunity_Target__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AmReg Opportunity Targets</relationshipLabel>
    <relationshipName>AmReg_Opportunity_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>