force-app/main/default/objects/AmReg_Opportunity_Target__c/fields/FSP_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>FSP_Account_ID__c</fullName>
    <description>Five Star Account Id originating from Five Star Org</description>
    <label>FSP Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>