force-app/main/default/objects/AmReg_Opportunity_Target__c/fields/FSP_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>FSP_Contact_ID__c</fullName>
    <label>FSP Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>